# typer

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  check.sh  justfile  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  scorecard.yml  test.yml  zizmor.yml
doc/: requirements.txt
doc/examples/: click_chained.py  example.py  themes.py
doc/examples/click/: collection.py  hello.py  imagepipe.py  multi_level.py
doc/source/: builders.rst  changelog.rst  click.rst  conf.py  examples.rst  howto.rst  index.rst  installation.rst  reference.rst  refs.rst  themes.rst  usage.rst
doc/source/_static/: style.css
doc/source/reference/: configuration.rst  directive.rst  index.rst  roles.rst
doc/source/typer_doc_ext/: web_driver.py
sphinxcontrib/typer/: __init__.py
src/sphinxcontrib/typer/: __init__.py
tests/: tests.py
tests/click/: conf.py  typer_cache.json
tests/click/aliases/: aliases.py  index.rst
tests/click/completion/: completion.py  index.rst
tests/click/complex/: index.rst
tests/click/complex/complex/: cli.py
tests/click/complex/complex/commands/: cmd_init.py  cmd_status.py
tests/click/imagepipe/: imagepipe.py  index.rst  references.rst
tests/click/inout/: index.rst  inout.py
tests/click/naval/: index.rst  naval.py
tests/click/repo/: index.rst  repo.py
tests/click/termui/: index.rst  termui.py
tests/click/validation/: index.rst  validation.py
tests/typer/: callbacks.py  conf.py
tests/typer/composite/: composite.rst  echo.rst  index.rst  multiply.rst  repeat.rst  subgroup.rst
tests/typer/composite/composite/: cli.py  echo.py  group.py  main.py  multiply.py
tests/typer/factory/: factory.py  index.rst
tests/typer/reference/: cli-ref.py  index.rst  reference.rst
tests/typer/render/: index.rst  render.py
tests/typer/subdocdir/: cli.py  index.rst
tests/typer/subdocdir/subdir/: commands.rst
