[tool.poetry]
name = "sphinxcontrib-typer"
version = "0.5.1"
description = "Auto generate docs for typer commands."
authors = ["Brian Kohan <bckohan@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sphinx-contrib/typer"
homepage = "https://sphinxcontrib-typer.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Topic :: Documentation :: Sphinx",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
  { include = "sphinxcontrib", from = "" }
]

[tool.poetry.dependencies]
python = "^3.9"
sphinx = ">=5.0.0"

selenium = "^4.0.0"
webdriver-manager = ">=3.0.0,<5.0.0"
cairosvg = "^2.7.0"
lxml = ">=4.2.0,<6.0.0"
typer-slim = {extras = ["standard"], version = ">=0.12.0,<1.0.0"}
pillow = ">=8.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
ipdb = "^0.13.13"
pytest = ">=7.4.3,<9.0.0"
pytest-cov = "^5.0.0"
doc8 = ">0.1"
mypy = "^1.11.1"
readme-renderer = {extras = ["md"], version = ">=44"}
aiohttp = "^3.9.1"
numpy = ">=2.0"
scipy = ">=1.13"
scikit-image = ">=0.24"
typing-extensions = ">=4.12"
scikit-learn = "^1.5.1"
beautifulsoup4 = "^4.12.2"
pypdf = ">=3.17.3,<5.0.0"
sphinx-autobuild = ">=2024.4.16"
furo = "^2024.8.6"
sphinx-rtd-theme = ">=1.3.0"


[tool.poetry.extras]
html = ["selenium", "webdriver-manager"]
pdf = ["cairosvg", "lxml"]
png = ["selenium", "webdriver-manager", "pillow"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = [
    "doc",
    "dist"
]

[tool.ruff.lint]
exclude = [
    "tests/**/*"
]

[tool.pytest.ini_options]
testpaths = [
    "tests/tests.py",
]
addopts = [
    "--doctest-modules",
    "--cov=sphinxcontrib.typer",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "--cov-report=term-missing:skip-covered",
    "--no-cov-on-fail",
    #"-x",
    #"--pdb",
    #"--flake8",
]

[tool.doc8]
max-line-length = 100
