[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinxcontrib-typer"
version = "0.8.1"
requires-python = ">=3.10,<4.0"
authors = [
  {name = "Brian Kohan", email = "bckohan@gmail.com"},
]
license = "MIT"
license-files = [ "LICENSE" ]
description = "Auto generate docs for typer commands."
readme = "README.md"
repository = "https://github.com/sphinx-contrib/typer"
homepage = "https://sphinxcontrib-typer.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Topic :: Documentation :: Sphinx",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "sphinx>=6.0",
    "typer>=0.22.0,<1.0.0"
]


[project.urls]
"Homepage" = "https://sphinxcontrib-typer.readthedocs.io"
"Documentation" = "https://sphinxcontrib-typer.readthedocs.io"
"Repository" = "https://github.com/sphinx-contrib/typer"
"Issues" = "https://github.com/sphinx-contrib/typer/issues"
"Changelog" = "https://sphinxcontrib-typer.readthedocs.io/en/stable/changelog.html"


[tool.uv]
package = true
conflicts = [
  [
    { group = "sphinx-6" },
    { group = "sphinx-7" },
    { group = "sphinx-8" },
    { group = "sphinx-9" },
  ],
]

[tool.hatch.build.targets.wheel]
packages = ["src/sphinxcontrib"]

[project.optional-dependencies]
html = [
    "selenium>=4.0.0,<5.0.0",
    "webdriver-manager>=3.0.0,<5.0.0",
]
pdf = [
    "cairosvg>=2.7.0,<3.0.0",
    "lxml>=4.2.0,<7.0.0"
]
png = [
    "selenium>=4.0.0,<5.0.0",
    "webdriver-manager>=3.0.0,<5.0.0",
    "pillow>=8.0.0"
]

[dependency-groups]
themes = [
    "furo>=2025.7.19",
    "sphinx-rtd-theme>=3.0.2",
]
docs = [
    "doc8>=1.1.2",
    "furo>=2025.7.19",
    "sphinx-autobuild>=2024.10.3",
    { include-group = "themes" },
]
lint = [
    "ruff>=0.13.1",
    "readme-renderer[md]>=40.0",
]
coverage = [
    "coverage>=7.6.0",
]
test = [
    { include-group = "coverage" },
    { include-group = "themes" },
    "beautifulsoup4>=4.13.5",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.6.1",
    "pypdf>=6.1.0",
    "scikit-image>=0.24.0",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
]
sphinx-6 = ["sphinx>=6.0,<7.0"]
sphinx-7 = ["sphinx>=7.0,<8.0"]
sphinx-8 = ["sphinx>=8.0,<9.0"]
sphinx-9 = ["sphinx>=9.0,<10.0; python_version >= '3.12'"]
precommit = [
    "pre-commit>=4.3.0",
]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "precommit" },
    "ipdb>=0.13.13",
]


[tool.ruff]
line-length = 88
exclude = [
    "doc",
    "dist"
]

[tool.ruff.lint]
exclude = [
    "tests/**/*"
]

[tool.pytest.ini_options]
testpaths = [
    "tests/tests.py",
]
addopts = [
    "--doctest-modules",
    "--cov=sphinxcontrib.typer",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "--cov-report=term-missing:skip-covered",
    "--no-cov-on-fail",
    #"-x",
    #"--pdb",
    #"--flake8",
]

[tool.doc8]
max-line-length = 100
